--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.22.0
   firebase_auth: ^3.8.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   js: ^0.6.2
