--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   uses-material-design: true
   assets:
    - cuisines.json
+   - restaurants.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
