--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^3.8.0
   google_nav_bar: ^5.0.6
   cloud_firestore: ^3.4.8
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   js: ^0.6.2
