--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   cloud_firestore: ^3.4.8
   shared_preferences: ^2.0.15
+  share: ^2.0.4
 
 dev_dependencies:
   js: ^0.6.2
