--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^3.4.8
   shared_preferences: ^2.0.15
   share: ^2.0.4
+  uuid: ^3.0.6
 
 dev_dependencies:
   js: ^0.6.2
